--- a/mp3-angular/src/app/app.component.html
+++ b/mp3-angular/src/app/app.component.html
@@ -1,8 +1,3 @@
-<!--The content below is only a placeholder and can be replaced.-->
-
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-
-
-<router-outlet></router-outlet>
+<app-header></app-header>
+<app-body></app-body>
+<app-footer></app-footer>
